// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Dialog/DialogHeader Title only: Components/Dialog/DialogHeader Title only 1`] = `
.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c6 {
  display: inline-block;
  width: 1em;
  height: 1em;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
  pointer-events: none;
  font-size: 24px;
}

.c4.c4 {
  padding: 0;
  width: 40px;
  height: 40px;
  color: #9e9e9e;
  opacity: 1;
  padding: 0;
  background-color: inherit;
  border-radius: 50%;
}

.c4.c4 .icon,
.c4.c4 .icon svg {
  font-size: 20px;
}

.c4.c4:hover {
  background-color: rgba(158,158,158,0.12);
}

.c4.c4:hover .icon {
  color: rgba(158,158,158,0.88);
}

.c4.c4:active .icon {
  color: #9e9e9e;
}

.c4.c4.c4.c4.disabled {
  background-color: inherit;
}

.c4.c4.c4.c4.disabled .icon {
  color: rgba(0,0,0,0.12);
}

.c4.c4 .rippleVisible {
  color: #9e9e9e;
  opacity: 0.24;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-animation-name: cBKRfH;
  animation-name: cBKRfH;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  white-space: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3.c3 > *:nth-child(n + 2) {
  margin-left: -10px;
}

.c0 {
  background-color: white;
  padding: 20px 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1.c1 {
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
}

.c1.c1 h2 {
  color: #212121;
  text-align: left;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  word-break: break-word;
  font-size: 1.25rem;
  font-weight: 500;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 24px;
}

.c1.c1.vertical h6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: 560px;
  margin: 0 auto;
}

.c2 {
  margin: -10px -10px -10px 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c2.c2 > * {
  margin-left: -10px;
}

.c2.c2 > *:first-child {
  margin-left: 0;
}

<div
  style={
    Object {
      "margin": "10px auto",
      "width": "640px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="MuiDialogTitle-root c1"
    >
      <h2
        className="MuiTypography-root MuiTypography-h6"
      >
        Title
        <div />
      </h2>
    </div>
    <div
      className="c2"
    >
      <div
        className="c3"
        direction="horizontal"
        onClick={[Function]}
      >
        <button
          aria-label="Close"
          className="MuiButtonBase-root MuiIconButton-root c4"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
          variant="round"
        >
          <span
            className="MuiIconButton-label"
          >
            <span
              className="  icon c5"
            >
              <svg
                className="c6"
                role="img"
              >
                <use
                  href="#undefined"
                  xlinkHref="#undefined"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Dialog/DialogHeader Title with action icons: Components/Dialog/DialogHeader Title with action icons 1`] = `
.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c6 {
  display: inline-block;
  width: 1em;
  height: 1em;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
  pointer-events: none;
  font-size: 24px;
}

.c7.c7 {
  padding: 0;
  width: 40px;
  height: 40px;
  color: #9e9e9e;
  opacity: 1;
  padding: 0;
  background-color: inherit;
  border-radius: 50%;
}

.c7.c7 .icon,
.c7.c7 .icon svg {
  font-size: 20px;
}

.c7.c7:hover {
  background-color: rgba(158,158,158,0.12);
}

.c7.c7:hover .icon {
  color: rgba(158,158,158,0.88);
}

.c7.c7:active .icon {
  color: #9e9e9e;
}

.c7.c7.c7.c7.disabled {
  background-color: inherit;
}

.c7.c7.c7.c7.disabled .icon {
  color: rgba(0,0,0,0.12);
}

.c7.c7 .rippleVisible {
  color: #9e9e9e;
  opacity: 0.24;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-animation-name: cBKRfH;
  animation-name: cBKRfH;
}

.c4.c4 {
  padding: 0;
  width: 40px;
  height: 40px;
  color: #edb63c;
  opacity: 1;
  padding: 0;
  background-color: inherit;
  border-radius: 50%;
}

.c4.c4 .icon,
.c4.c4 .icon svg {
  font-size: 20px;
}

.c4.c4:hover {
  background-color: rgba(237,182,60,0.12);
}

.c4.c4:hover .icon {
  color: rgba(237,182,60,0.88);
}

.c4.c4:active .icon {
  color: #edb63c;
}

.c4.c4.c4.c4.disabled {
  background-color: inherit;
}

.c4.c4.c4.c4.disabled .icon {
  color: rgba(0,0,0,0.12);
}

.c4.c4 .rippleVisible {
  color: #edb63c;
  opacity: 0.24;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-animation-name: cBKRfH;
  animation-name: cBKRfH;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  white-space: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3.c3 > *:nth-child(n + 2) {
  margin-left: -10px;
}

.c0 {
  background-color: white;
  padding: 20px 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1.c1 {
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
}

.c1.c1 h2 {
  color: #212121;
  text-align: left;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  word-break: break-word;
  font-size: 1.25rem;
  font-weight: 500;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 24px;
}

.c1.c1.vertical h6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: 560px;
  margin: 0 auto;
}

.c2 {
  margin: -10px -10px -10px 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c2.c2 > * {
  margin-left: -10px;
}

.c2.c2 > *:first-child {
  margin-left: 0;
}

.c8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 100%;
}

<div
  style={
    Object {
      "margin": "10px auto",
      "width": "640px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="MuiDialogTitle-root c1"
    >
      <h2
        className="MuiTypography-root MuiTypography-h6"
      >
        Title
        <div />
      </h2>
    </div>
    <div
      className="c2"
    >
      <div
        className="c3"
        direction="horizontal"
        onClick={[Function]}
      >
        <button
          aria-label="Favorite"
          className="MuiButtonBase-root MuiIconButton-root c4"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
          variant="round"
        >
          <span
            className="MuiIconButton-label"
          >
            <span
              className="  icon c5"
            >
              <svg
                className="c6"
                role="img"
              >
                <use
                  href="#undefined"
                  xlinkHref="#undefined"
                />
              </svg>
            </span>
          </span>
        </button>
        <button
          aria-label="Settings"
          className="MuiButtonBase-root MuiIconButton-root c7"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
          variant="round"
        >
          <span
            className="MuiIconButton-label"
          >
            <span
              className="  icon c5"
            >
              <svg
                className="c6"
                role="img"
              >
                <use
                  href="#undefined"
                  xlinkHref="#undefined"
                />
              </svg>
            </span>
          </span>
        </button>
        <div>
          <div
            className="c8"
            onClick={[Function]}
            onMouseDown={[Function]}
          >
            <button
              aria-label="More"
              className="MuiButtonBase-root MuiIconButton-root c7"
              disabled={false}
              onBlur={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              type="button"
              variant="round"
            >
              <span
                className="MuiIconButton-label"
              >
                <span
                  className="  icon c5"
                >
                  <svg
                    className="c6"
                    role="img"
                  >
                    <use
                      href="#undefined"
                      xlinkHref="#undefined"
                    />
                  </svg>
                </span>
              </span>
            </button>
          </div>
        </div>
        <button
          aria-label="Close"
          className="MuiButtonBase-root MuiIconButton-root c7"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
          variant="round"
        >
          <span
            className="MuiIconButton-label"
          >
            <span
              className="  icon c5"
            >
              <svg
                className="c6"
                role="img"
              >
                <use
                  href="#undefined"
                  xlinkHref="#undefined"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Dialog/DialogHeader Title with avatar and information: Components/Dialog/DialogHeader Title with avatar and information 1`] = `
.c10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c11 {
  display: inline-block;
  width: 1em;
  height: 1em;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
  pointer-events: none;
  font-size: 24px;
}

.c12.c12 {
  padding: 0;
  width: 40px;
  height: 40px;
  color: #9e9e9e;
  opacity: 1;
  padding: 0;
  background-color: inherit;
  border-radius: 50%;
}

.c12.c12 .icon,
.c12.c12 .icon svg {
  font-size: 20px;
}

.c12.c12:hover {
  background-color: rgba(158,158,158,0.12);
}

.c12.c12:hover .icon {
  color: rgba(158,158,158,0.88);
}

.c12.c12:active .icon {
  color: #9e9e9e;
}

.c12.c12.c12.c12.disabled {
  background-color: inherit;
}

.c12.c12.c12.c12.disabled .icon {
  color: rgba(0,0,0,0.12);
}

.c12.c12 .rippleVisible {
  color: #9e9e9e;
  opacity: 0.24;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-animation-name: cBKRfH;
  animation-name: cBKRfH;
}

.c9.c9 {
  padding: 0;
  width: 40px;
  height: 40px;
  color: #edb63c;
  opacity: 1;
  padding: 0;
  background-color: inherit;
  border-radius: 50%;
}

.c9.c9 .icon,
.c9.c9 .icon svg {
  font-size: 20px;
}

.c9.c9:hover {
  background-color: rgba(237,182,60,0.12);
}

.c9.c9:hover .icon {
  color: rgba(237,182,60,0.88);
}

.c9.c9:active .icon {
  color: #edb63c;
}

.c9.c9.c9.c9.disabled {
  background-color: inherit;
}

.c9.c9.c9.c9.disabled .icon {
  color: rgba(0,0,0,0.12);
}

.c9.c9 .rippleVisible {
  color: #edb63c;
  opacity: 0.24;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-animation-name: cBKRfH;
  animation-name: cBKRfH;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  white-space: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8.c8 > *:nth-child(n + 2) {
  margin-left: -10px;
}

.c2.c2 {
  width: 32px;
  height: 32px;
  font-size: 1rem;
  font-weight: 500;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 22px;
  background-color: #6FAFEB;
}

.c2.c2:hover {
  opacity: 0.88;
  cursor: pointer;
}

.c2.c2:active {
  opacity: 0.76;
}

.c2:focus {
  outline: none;
}

.c2 > .avatar-short-name {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  background-color: white;
  padding: 20px 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6.c6 {
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
}

.c6.c6 h2 {
  color: #212121;
  text-align: center;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  word-break: break-word;
  font-size: 1rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 22px;
}

.c6.c6.vertical h6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: 560px;
  margin: 0 auto;
}

.c7 {
  margin: -10px -10px -10px 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c7.c7 > * {
  margin-left: -10px;
}

.c7.c7 > *:first-child {
  margin-left: 0;
}

.c13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 16px;
  width: 200px;
}

.c4 {
  font-size: 0.875rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 20px;
  color: #212121;
  margin: 0;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  word-break: break-word;
}

.c5 {
  font-size: 0.75rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 16px;
  color: #9e9e9e;
  margin: 0;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  word-break: break-word;
}

.c3 {
  margin-left: 8px;
  max-width: 160px;
}

@media screen and (max-width:640px) {
  .c1 {
    width: auto;
  }
}

@media screen and (max-width:640px) {
  .c3 {
    display: none;
  }
}

<div
  style={
    Object {
      "margin": "10px auto",
      "width": "640px",
    }
  }
>
  <h4>
    One line: 
  </h4>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className=""
      >
        <div
          className="MuiAvatar-root c2 MuiAvatar-colorDefault"
          color="lake"
          size="medium"
        >
          SH
        </div>
      </div>
      <div
        className="c3"
      >
        <h3
          className="c4"
        >
          Jessica Lewis
        </h3>
        <h4
          className="c5"
        >
          1/23/2019 10:02 AM
        </h4>
      </div>
    </div>
    <div
      className="MuiDialogTitle-root c6"
    >
      <h2
        className="MuiTypography-root MuiTypography-h6"
      >
        Bulldog friendship.jpegdddddddddddddddddddd
         
        (1 / 20)
        <div />
      </h2>
    </div>
    <div
      className="c7"
    >
      <div
        className="c8"
        direction="horizontal"
        onClick={[Function]}
      >
        <button
          aria-label="Favorite"
          className="MuiButtonBase-root MuiIconButton-root c9"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
          variant="round"
        >
          <span
            className="MuiIconButton-label"
          >
            <span
              className="  icon c10"
            >
              <svg
                className="c11"
                role="img"
              >
                <use
                  href="#undefined"
                  xlinkHref="#undefined"
                />
              </svg>
            </span>
          </span>
        </button>
        <button
          aria-label="Settings"
          className="MuiButtonBase-root MuiIconButton-root c12"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
          variant="round"
        >
          <span
            className="MuiIconButton-label"
          >
            <span
              className="  icon c10"
            >
              <svg
                className="c11"
                role="img"
              >
                <use
                  href="#undefined"
                  xlinkHref="#undefined"
                />
              </svg>
            </span>
          </span>
        </button>
        <div>
          <div
            className="c13"
            onClick={[Function]}
            onMouseDown={[Function]}
          >
            <button
              aria-label="More"
              className="MuiButtonBase-root MuiIconButton-root c12"
              disabled={false}
              onBlur={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              type="button"
              variant="round"
            >
              <span
                className="MuiIconButton-label"
              >
                <span
                  className="  icon c10"
                >
                  <svg
                    className="c11"
                    role="img"
                  >
                    <use
                      href="#undefined"
                      xlinkHref="#undefined"
                    />
                  </svg>
                </span>
              </span>
            </button>
          </div>
        </div>
        <button
          aria-label="Close"
          className="MuiButtonBase-root MuiIconButton-root c12"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
          variant="round"
        >
          <span
            className="MuiIconButton-label"
          >
            <span
              className="  icon c10"
            >
              <svg
                className="c11"
                role="img"
              >
                <use
                  href="#undefined"
                  xlinkHref="#undefined"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
  <br />
  <br />
  <h4>
    Break line: 
  </h4>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className=""
      >
        <div
          className="MuiAvatar-root c2 MuiAvatar-colorDefault"
          color="lake"
          size="medium"
        >
          SH
        </div>
      </div>
      <div
        className="c3"
      >
        <h3
          className="c4"
        >
          Jessica Lewis
        </h3>
        <h4
          className="c5"
        >
          1/23/2019 10:02 AM
        </h4>
      </div>
    </div>
    <div
      className="MuiDialogTitle-root c6"
    >
      <h2
        className="MuiTypography-root MuiTypography-h6"
      >
        <span>
          Bulldog friendship.jpegdddddddddddddddddddd
        </span>
        <span>
           
          (1 / 20)
        </span>
        <div />
      </h2>
    </div>
    <div
      className="c7"
    >
      <div
        className="c8"
        direction="horizontal"
        onClick={[Function]}
      >
        <button
          aria-label="Favorite"
          className="MuiButtonBase-root MuiIconButton-root c9"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
          variant="round"
        >
          <span
            className="MuiIconButton-label"
          >
            <span
              className="  icon c10"
            >
              <svg
                className="c11"
                role="img"
              >
                <use
                  href="#undefined"
                  xlinkHref="#undefined"
                />
              </svg>
            </span>
          </span>
        </button>
        <button
          aria-label="Settings"
          className="MuiButtonBase-root MuiIconButton-root c12"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
          variant="round"
        >
          <span
            className="MuiIconButton-label"
          >
            <span
              className="  icon c10"
            >
              <svg
                className="c11"
                role="img"
              >
                <use
                  href="#undefined"
                  xlinkHref="#undefined"
                />
              </svg>
            </span>
          </span>
        </button>
        <div>
          <div
            className="c13"
            onClick={[Function]}
            onMouseDown={[Function]}
          >
            <button
              aria-label="More"
              className="MuiButtonBase-root MuiIconButton-root c12"
              disabled={false}
              onBlur={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              type="button"
              variant="round"
            >
              <span
                className="MuiIconButton-label"
              >
                <span
                  className="  icon c10"
                >
                  <svg
                    className="c11"
                    role="img"
                  >
                    <use
                      href="#undefined"
                      xlinkHref="#undefined"
                    />
                  </svg>
                </span>
              </span>
            </button>
          </div>
        </div>
        <button
          aria-label="Close"
          className="MuiButtonBase-root MuiIconButton-root c12"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
          variant="round"
        >
          <span
            className="MuiIconButton-label"
          >
            <span
              className="  icon c10"
            >
              <svg
                className="c11"
                role="img"
              >
                <use
                  href="#undefined"
                  xlinkHref="#undefined"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
